--- a/index.html
+++ b/index.html
@@ -93,23 +93,23 @@
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
                     <li class="content__list-item">
-                        <a href="lesson-1/index.html">Урок 1</a>
+                        <a href="lesson-1/inedex.html">Урок 1</a>
                     </li>
 
                      <li class="content__list-item">
-                        <a href="lesson-2/index.html">Урок 2</a>
+                        <a href="lesson-2/inedex.html">Урок 2</a>
                     </li>
 
                      <li class="content__list-item">
-                        <a href="lesson-3/index.html">Урок 3</a>
+                        <a href="lesson-3/inedex.html">Урок 3</a>
                     </li>
 
                      <li class="content__list-item">
-                        <a href="lesson-4/index.html">Урок 4</a>
+                        <a href="lesson-4/inedex.html">Урок 4</a>
                     </li>
 
                      <li class="content__list-item">
-                        <a href="lesson-5/index.html">Урок 5</a>
+                        <a href="lesson-5/inedex.html">Урок 5</a>
                     </li>
                 </ul>
             </div>
