--- a/lesson-5/inedex.html
+++ b/lesson-5/inedex.html
@@ -8,6 +8,7 @@
     <style>
     .block1 {
         background: rgb(85, 75, 75);
+        color: #fff;
     }
     .block2 {
         background: red;
