--- a/lesson-5/inedex.html
+++ b/lesson-5/inedex.html
@@ -38,7 +38,7 @@
    </div>
  <div class="block3">
     А здесь у меня какие-то элементы:
-
+<div>
     <span class="text1">Элемент</span>
     <span class="text1">Элемент</span>
     <span class="text1">Элемент</span>
@@ -53,6 +53,7 @@
     <span class="text1">Элемент</span>
     <span class="text1">Элемент</span>
     <span class="text1">Элемент</span>
+    </div>
  </div>
 </body>
 </html>
