--- a/index.html
+++ b/index.html
@@ -111,6 +111,27 @@
                      <li class="content__list-item">
                         <a href="lesson-5/inedex.html">Урок 5</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-6(14)/inedex.html">Урок 14</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-7(15)/inedex.html">Урок 15</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-8(16)/inedex.html">Урок 16</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-9(17)/inedex.html">Урок 17</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-10(18)/inedex.html">Урок 18</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-11(19)/inedex.html">Урок 19</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-12(20)/inedex.html">Урок 20</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
