--- a/index.html
+++ b/index.html
@@ -93,7 +93,43 @@
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
                     <li class="content__list-item">
-                        <a href="lesson1/index.html">Урок 1</a>
+                        <a href="lesson-1/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-2/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-3/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-4/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-5/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-6(14)/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-7(15)/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-8(16)/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-9(17)/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-10(18)/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-11(19)/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-12(20)/inedex.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-13(28)/index.html">Урок 28</a>
                     </li>
                 </ul>
             </div>
